# make_my_code_journal

./: .gitignore  Cargo.toml  LICENSE  README.md  config_git_journal.json  default_config.json
src/: config.rs  diffs.rs  entry.rs  folding_list.rs  journal.rs  lib.rs  main.rs
src/journal/: config.rs  diffs.rs  entry.rs  mod.rs
