[package]
name = "mmcj"
version = "0.1.0"
authors = ["Aaron Dorrance <celnardur@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
git2 = "0.10.2"
serde_json = "1.0"
serde = {version = "1.0", features = ["derive"] }
chrono = {version = "0.4", features = ["serde"] }

